# odyssey-panchatantra

./: README.md  pyproject.toml
scripts/: base_call.py  cat_video.py  panchatantra_brahmin_and_tricksters.py  panchatantra_odyssey_with_tts.py
src/odyssey_panchatantra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
